<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="106dp"
        android:layout_height="68dp"
        android:layout_marginBottom="193dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="490dp"
        android:background="@drawable/round_button"
        android:text="@string/online"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/app_image"
        android:layout_width="173dp"
        android:layout_height="152dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/music" />

    <Button
        android:id="@+id/button5"
        android:layout_width="106dp"
        android:layout_height="68dp"
        android:layout_marginBottom="193dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="490dp"
        android:background="@drawable/round_button"
        android:text="@string/offline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="550dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="334dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:contentDescription="@string/settings" />
</android.support.constraint.ConstraintLayout>