<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginBottom="466dp"
        android:layout_marginTop="225dp"
        android:text="@string/direct"
        android:layout_above="@+id/searchView4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/viewArtists"
        android:layout_width="164dp"
        android:layout_height="397dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:choiceMode="singleChoice"
        android:divider="#020202"
        android:dividerHeight="1dp"
        android:fadeScrollbars="false"
        android:layout_above="@+id/searchView3"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/viewSongs"
        android:layout_width="136dp"
        android:layout_height="259dp"
        android:layout_marginBottom="340dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="132dp"
        android:choiceMode="singleChoice"
        android:divider="#0B0A0A"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="261dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="13dp"
        android:text="@string/get_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSongs" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@drawable/ic_stop" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="238dp"
        android:layout_height="22dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="38dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="105dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/empty"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/viewArtists" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="172dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/viewArtists"
        app:layout_constraintEnd_toStartOf="@+id/searchView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_sync" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="65dp"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewArtists"
        app:srcCompat="@drawable/music" />

    <SearchView
        android:id="@+id/searchView4"
        android:layout_width="128dp"
        android:layout_height="23dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="75dp"
        android:queryHint="@string/search2"
        android:background="@drawable/searcher"
        app:layout_constraintBottom_toTopOf="@+id/viewSongs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/viewArtists"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView3"
        android:layout_width="103dp"
        android:layout_height="36dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="223dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:queryHint="@string/search1"
        android:background="@drawable/searcher"
        app:layout_constraintBottom_toTopOf="@+id/viewArtists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>