<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaPlayerOfflineActivity">

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="248dp"
        android:layout_height="31dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="42dp"
        android:layout_height="22dp"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="587dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="42dp"
        android:layout_height="17dp"
        android:layout_marginBottom="165dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="587dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="137dp"
        android:gravity="center"
        android:text="@string/empty"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="203dp"
        android:layout_height="203dp"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton10"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:srcCompat="@drawable/ic_stop" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/circular_btn"
        android:contentDescription="@string/desc3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:srcCompat="@android:drawable/ic_media_ff" />


</android.support.constraint.ConstraintLayout>