<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfflineActivity">

    <ListView
        android:id="@+id/listViewOffline1"
        android:layout_width="157dp"
        android:layout_height="482dp"
        android:divider="#0B0A0A"
        android:dividerHeight="1dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        android:choiceMode="singleChoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listViewOffline2"
        android:layout_width="130dp"
        android:layout_height="418dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="85dp"
        android:choiceMode="singleChoice"
        android:divider="#0B0A0A"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="47dp"
        android:layout_height="62dp"
        android:layout_marginBottom="352dp"
        android:layout_marginTop="231dp"
        android:text="@string/direct"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="136dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="144dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewOffline2"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <SearchView
        android:id="@+id/searchArtist"
        android:layout_width="156dp"
        android:layout_height="29dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="239dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:queryHint="@string/search1"
        android:background="@drawable/searcher"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/listViewOffline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchSong"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="35dp"
        android:queryHint="@string/search2"
        android:background="@drawable/searcher"
        app:layout_constraintBottom_toTopOf="@+id/listViewOffline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listViewOffline1"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>